# AppliedRoboticsStudentInterface

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  changeMapUtility.sh
calibration/: VID5.xml  default.xml  out_camera_data.xml
docs/html/: README_8md.html  annotated.html  camera__calibration_8cpp.html  classSettings-members.html  classSettings.html  classWindowData-members.html  classWindowData.html  classdubins_1_1Arc-members.html  classdubins_1_1Arc.html  classdubins_1_1Curve-members.html  classdubins_1_1Curve.html  classdubins_1_1Position-members.html  classdubins_1_1Position.html  classes.html  clipper__helper_8hpp.html  clipper__helper_8hpp_source.html  corner__detection_8hpp.html  corner__detection_8hpp_source.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_d44c64559bbebec7f509842c48db8b23.html  dubins_8cpp.html  dubins_8hpp.html  dubins_8hpp_source.html  files.html  functions.html  functions_enum.html  functions_eval.html  functions_func.html  functions_vars.html  globals.html  globals_defs.html  globals_enum.html  globals_eval.html  globals_func.html  globals_type.html  globals_vars.html  hsv__panel_8cpp.html  hsv__panel_8hpp.html  hsv__panel_8hpp_source.html  index.html  (+17 more)
docs/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  defines_0.js  defines_1.js  defines_2.js  defines_3.js  enums_0.js  enums_1.js  enums_2.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  enumvalues_4.js  (+57 more)
include/: clipper_helper.hpp  corner_detection.hpp  dubins.hpp  hsv_panel.hpp  polygon_utils.hpp
src/: Doxyfile  dubins.cpp  dumbcaller.cpp  hsv_panel.cpp  student_interface.cpp
src/VCD/: i.txt  main.py  output.txt
src/VCD/algorithms/: VCD.py
src/demo_shape_detection/: demo_simple_shape_detection.cpp  hsv_panel.cpp
src/html/: annotated.html  camera__calibration_8cpp.html  classSettings-members.html  classSettings.html  classWindowData-members.html  classWindowData.html  classes.html  dubins_8cpp.html  dumbcaller_8cpp.html  files.html  functions.html  functions_enum.html  functions_eval.html  functions_func.html  functions_vars.html  globals.html  globals_defs.html  globals_enum.html  globals_eval.html  globals_func.html  globals_type.html  globals_vars.html  hsv__panel_8cpp.html  index.html  menudata.js  namespacedubins.html  namespacemembers.html  namespacemembers_func.html  namespacemembers_type.html  namespacemembers_vars.html  namespaces.html  namespacestudent.html  structstudent_1_1Color__config-members.html  structstudent_1_1Color__config.html  student__interface_8cpp.html
src/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  defines_0.js  defines_1.js  defines_2.js  enums_0.js  enums_1.js  enums_2.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  enumvalues_4.js  enumvalues_5.js  enumvalues_6.js  files_0.js  files_1.js  files_2.js  (+42 more)
src/latex/: annotated.tex  camera__calibration_8cpp.tex  classSettings.tex  classWindowData.tex  dubins_8cpp.tex  dumbcaller_8cpp.tex  files.tex  hsv__panel_8cpp.tex  namespacedubins.tex  namespaces.tex  namespacestudent.tex  refman.tex  structstudent_1_1Color__config.tex  student__interface_8cpp.tex
src/path-planning/: i.txt  output.txt  rrt.py  rrt_naiive.py  vertical_cell_decomposition.py
src/path-planning/helpers/: geometry.py
